<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger_title">Приложение</string>
    <string name="email_hint">Введите электронную почту: </string>
    <string name="password_hint">Введите пароль:</string>
    <string name="sign_in_button">Войти в аккаунт</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="registration">Регистрация</string>
    <string name="name_hint">Введите ваше имя: </string>
    <string name="surname_hint">Введите вашу фамилию: </string>
    <string name="age_hint">Введите ваш возраст: </string>
    <string name="signUp_button">Зарегистрироваться</string>
    <string name="reset_password">Сбросить пароль?</string>
    <string name="reset_password_button">Сбросить пароль</string>
    <string name="logout_menu">Выйти</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="type_your_message_hint">Type your message: </string>
</resources>