<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/textViewResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/Skobeloff"
        android:layout_margin="8dp"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_button"/>

</LinearLayout>